add_subdirectory(config)
add_subdirectory(block)
add_subdirectory(task)
add_subdirectory(hal)
add_subdirectory(logger)
add_subdirectory(ros)
add_subdirectory(ros2)
add_subdirectory(can)
add_subdirectory(rtTest)
add_subdirectory(sequencer)
add_subdirectory(socket)
add_subdirectory(devel)
add_subdirectory(system)
